IJPL-163517 groupId for our fork changed from `org.languagetool` to `org.jetbrains.intellij.deps.languagetool`

--- a/languagetool-client-example/pom.xml
+++ b/languagetool-client-example/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.languagetool</groupId>
+    <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
     <artifactId>languagetool-client-example</artifactId>
     <version>2.4</version>
     
@@ -22,43 +22,43 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-all</artifactId>
             <version>5.9</version>
         </dependency>
         <!--
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
             <version>5.5-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-core-premium</artifactId>
             <version>5.5-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-en-premium</artifactId>
             <version>5.5-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-de-premium</artifactId>
             <version>5.5-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-fr-premium</artifactId>
             <version>5.5-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-es-premium</artifactId>
             <version>5.5-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-nl-premium</artifactId>
             <version>5.5-SNAPSHOT</version>
         </dependency>
