--- a/languagetool-language-modules/all/pom.xml
+++ b/languagetool-language-modules/all/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.languagetool</groupId>
+        <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
         <version>6.5</version>
         <relativePath>../../pom.xml</relativePath>
@@ -41,131 +41,131 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-ar</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-ast</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-be</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-br</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-ca</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-da</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-de</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-de-DE-x-simple-language</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-el</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-en</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-eo</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-es</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-fa</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-fr</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-ga</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-gl</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-it</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-ja</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-km</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-nl</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-pl</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-pt</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-ro</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-ru</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-sk</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-sl</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-sv</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-ta</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-tl</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-uk</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-zh</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-crh</artifactId>
         </dependency>
         <dependency>
@@ -178,7 +178,7 @@
 
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
