--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.languagetool</groupId>
+    <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
     <artifactId>languagetool-parent</artifactId>
     <version>6.5</version>
     <packaging>pom</packaging>
@@ -744,213 +744,213 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-all</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-ar</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-ast</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-be</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-br</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-ca</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-da</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-de</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-de-DE-x-simple-language</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-el</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-en</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-eo</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-es</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-fa</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-fr</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-ga</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-gl</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-it</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-ja</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-km</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-nl</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-pl</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-pt</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-ro</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-ru</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-sk</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-sl</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-sv</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-ta</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-tl</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-uk</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-zh</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>language-crh</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>languagetool-commandline</artifactId>
                 <version>6.5</version>
             </dependency>
             <!-- Start LT-Dependencies -->
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>languagetool-core</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>languagetool-dev</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>languagetool-gui-commons</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>languagetool-http-client</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>languagetool-server</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>languagetool-standalone</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>languagetool-tools</artifactId>
                 <version>6.5</version>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>languagetool-wikipedia</artifactId>
                 <version>6.5</version>
             </dependency>
@@ -1202,7 +1202,7 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.languagetool</groupId>
+                <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
                 <artifactId>languagetool-core</artifactId>
                 <version>6.5</version>
                 <type>test-jar</type>
