--- a/languagetool-commandline/pom.xml
+++ b/languagetool-commandline/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.languagetool</groupId>
+        <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
         <version>6.5</version>
     </parent>
@@ -46,11 +46,11 @@
             <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-all</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
         </dependency>
         <dependency>
@@ -64,7 +64,7 @@
         </dependency>
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
