--- a/languagetool-core/pom.xml
+++ b/languagetool-core/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.languagetool</groupId>
+        <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
         <version>6.5</version>
     </parent>
