--- a/languagetool-dev/pom.xml
+++ b/languagetool-dev/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.languagetool</groupId>
+        <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
         <version>6.5</version>
     </parent>
@@ -47,15 +47,15 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-all</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-commandline</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-wikipedia</artifactId>
         </dependency>
         <dependency>
