--- a/languagetool-standalone/pom.xml
+++ b/languagetool-standalone/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.languagetool</groupId>
+        <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
         <version>6.5</version>
     </parent>
@@ -37,35 +37,35 @@
             <artifactId>commons-collections4</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>language-all</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-commandline</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
         </dependency>
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
             <type>test-jar</type>
             <!-- Some tests are used at runtime for rule developers, thus no 'test' scope here -->
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-gui-commons</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-server</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-tools</artifactId>
         </dependency>
         <dependency>
