--- a/languagetool-tools/pom.xml
+++ b/languagetool-tools/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.languagetool</groupId>
+        <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
         <version>6.5</version>
     </parent>
@@ -46,7 +46,7 @@
             <artifactId>morfologik-tools</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.languagetool</groupId>
+            <groupId>org.jetbrains.intellij.deps.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
         </dependency>
         <dependency>
