IJPL-163517 Publish to https://packages.jetbrains.team/maven/p/ij/intellij-dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -90,23 +90,12 @@
 
     <distributionManagement>
         <repository>
-            <id>repo.languagetool.org</id>
-            <name>languagetool-os-release</name>
-            <url>https://repo.languagetool.org/artifactory/languagetool-os-release/</url>
+            <id>space-intellij-dependencies</id>
+            <url>https://packages.jetbrains.team/maven/p/ij/intellij-dependencies</url>
         </repository>
-        <snapshotRepository>
-            <!-- see ~/.m2/settings.xml for authentication -->
-            <id>repo.languagetool.org</id>
-            <name>languagetool-os-snapshot</name>
-            <url>https://repo.languagetool.org/artifactory/languagetool-os-snapshot/</url>
-        </snapshotRepository>
     </distributionManagement>
 
     <repositories>
-        <repository>
-            <id>repo.languagetool.org</id>
-            <url>https://repo.languagetool.org/artifactory/languagetool-os-snapshot/</url>
-        </repository>
     </repositories>
 
     <properties>
