update language-all jar config

--- a/languagetool-language-modules/all/pom.xml
+++ b/languagetool-language-modules/all/pom.xml
@@ -199,7 +199,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <classifier>languages-all</classifier>
+                    <forceCreation>true</forceCreation>
                 </configuration>
             </plugin>
         </plugins>
