Change Main-Class in jar-plugin config

--- a/languagetool-server/pom.xml
+++ b/languagetool-server/pom.xml
@@ -156,7 +156,7 @@
                         <manifestEntries>
                             <!-- as we later unzip the language JARs (see languagetool-standalone's pom.xml), we need to add the top directory to the classpath: -->
                             <Class-Path>./</Class-Path>
-                            <Main-Class>org.languagetool.server.HTTPSServer</Main-Class>
+                            <Main-Class>org.languagetool.server.HTTPServer</Main-Class>
                             <ComponentVersion>${project.version}</ComponentVersion>
                             <Implementation-Date>${maven.build.timestamp}</Implementation-Date>
                         </manifestEntries>
