--- a/languagetool-language-modules/fr/pom.xml
+++ b/languagetool-language-modules/fr/pom.xml
@@ -46,6 +46,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>french-pos-dict</artifactId>
         </dependency>
