--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
     </repositories>
 
     <properties>
-        <revision>6.6-15</revision>
+        <revision>6.6-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
