Add noroot user

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ languagetool-language-modules/nl/src/main/resources/org/languagetool/rules/nl/gr
 .attach_pid*
 bin/
 LanguageTool*/
+/languagetool-pod.yaml
