--- a/Dockerfile.neuris
+++ b/Dockerfile.neuris
@@ -1,7 +1,9 @@
 FROM alpine:3.20
 RUN apk add --no-cache fasttext openjdk21-jre
 
-RUN mkdir /home/languageTool
+RUN adduser -u 10000 -h /home/languagetool -D languagetool
+USER languagetool
+
 WORKDIR /home/languageTool
 
 COPY libs/ libs
