Add start option public
RISDEV-254

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ languagetool-language-modules/nl/src/main/resources/org/languagetool/rules/nl/gr
 bin/
 LanguageTool*/
 /languagetool-pod.yaml
+/languagetool-deployment.yaml
