--- a/Dockerfile.neuris
+++ b/Dockerfile.neuris
@@ -15,4 +15,4 @@ COPY server.properties .
 
 EXPOSE 8081/tcp
 
-ENTRYPOINT [ "java", "-cp", "languagetool-server.jar", "org.languagetool.server.HTTPServer", "--config", "server.properties", "--port", "8081", "--allow-origin" ]
+ENTRYPOINT [ "java", "-cp", "languagetool-server.jar", "org.languagetool.server.HTTPServer", "--config", "server.properties", "--port", "8081", "--allow-origin", "--public" ]
