--- a/.github/workflows/dependency-check-ok.yml
+++ b/.github/workflows/dependency-check-ok.yml
@@ -24,7 +24,7 @@ jobs:
           java-version: '17'
 
       - name: 'Build with Maven'
-        run: mvn clean install
+        run: mvn clean install -DskipTests
 
       - name: 'Run Tests'
         run: mvn test
