--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
       - run:
           name: Scan dependencies
           command: |
-            cd $CIRCLE_WORKING_DIRECTORY && mvn -s .circleci.settings.xml clean dependency-check:aggregate
+            cd $CIRCLE_WORKING_DIRECTORY && mvn -s .circleci.settings.xml clean dependency-check:aggregate -DnvdApiKey="$nvdApiKey"
       - store_artifacts:
           path: $CIRCLE_WORKING_DIRECTORY/target/dependency-check-report.html
   test-and-deploy-full:
