Add AdverbFilterTest class and update CI workflow for main branch

--- a/.github/workflows/dependency-check-ok.yml
+++ b/.github/workflows/dependency-check-ok.yml
@@ -1,8 +1,12 @@
 name: 'Java CI'
 
 on:
-  push: 
+  push:
+    branches:
+    - main
   pull_request:
+    branches:
+    - main
     paths-ignore:
       - '**pom.xml' 
 
