compile/core updates for jdk24

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.proc>full</maven.compiler.proc>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss Z</maven.build.timestamp.format>
         <!--Maven-Plugin-Versions -->
         <!-- NOTE: don't update without testing OpenOffice, 3.0.2 caused "Got no data stream!" after add-on installation -->
@@ -121,7 +122,7 @@
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-shade-plugin>3.2.4</maven-shade-plugin>
@@ -192,7 +193,7 @@
         <javax.measure.unit-api.version>1.0</javax.measure.unit-api.version>
         <javax.xml.bind.jaxb-api.version>2.3.1</javax.xml.bind.jaxb-api.version>
 
-        <net.loomchild.segment.version>2.0.3</net.loomchild.segment.version>
+        <net.loomchild.segment.version>2.0.4</net.loomchild.segment.version>
 
         <org.apache.commons.commons-collections4.version>4.4</org.apache.commons.commons-collections4.version>
         <org.apache.commons.commons-csv.version>1.12.0</org.apache.commons.commons-csv.version>
@@ -213,9 +214,9 @@
         <org.languagetool.asturian-pos-dict.version>0.1</org.languagetool.asturian-pos-dict.version>
         <org.tukaani.version>1.10</org.tukaani.version>
 
-        <guava.version>33.3.1-jre</guava.version>
+        <guava.version>33.4.5-jre</guava.version>
         <jackson.version>2.18.0</jackson.version>
-        <lombok.version>1.18.34</lombok.version>
+        <lombok.version>1.18.38</lombok.version>
         <lucene.version>5.5.5</lucene.version>
         <morfologik.version>2.1.9</morfologik.version>
         <optimaize.languagedetector.language-detector.version>0.6</optimaize.languagedetector.language-detector.version>
