change scope of org.jetbrains.annotations to provided fixes: #11288

--- a/languagetool-core/pom.xml
+++ b/languagetool-core/pom.xml
@@ -206,6 +206,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>it.unimi.dsi</groupId>
