--- a/languagetool-http-client/pom.xml
+++ b/languagetool-http-client/pom.xml
@@ -45,6 +45,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
