--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
 
         <org.glassfish.jaxb.jaxb-runtime.version>4.0.5</org.glassfish.jaxb.jaxb-runtime.version>
         <org.ioperm.morphology-el.version>1.0.0</org.ioperm.morphology-el.version>
-        <org.jetbrains.annotations.version>25.0.0</org.jetbrains.annotations.version>
+        <org.jetbrains.annotations.version>26.0.2</org.jetbrains.annotations.version>
         <it.unimi.dsi.fastutil.core.version>8.5.14</it.unimi.dsi.fastutil.core.version>
         <org.json.version>20240303</org.json.version>
         <org.mybatis.version>3.5.16</org.mybatis.version>
@@ -706,6 +706,7 @@
                 <groupId>org.jetbrains</groupId>
                 <artifactId>annotations</artifactId>
                 <version>${org.jetbrains.annotations.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>it.unimi.dsi</groupId>
