adding new sonatype plugin for release

--- a/pom.xml
+++ b/pom.xml
@@ -1416,6 +1416,15 @@
                     <nrOfIndentSpace>4</nrOfIndentSpace>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.9.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <profiles>
