--- a/languagetool-tools/pom.xml
+++ b/languagetool-tools/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>${revision}</version>
+        <version>6.7</version>
     </parent>
 
     <artifactId>languagetool-tools</artifactId>
