--- a/languagetool-wikipedia/pom.xml
+++ b/languagetool-wikipedia/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>6.7</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>languagetool-wikipedia</artifactId>
